# varlink-language-server

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
codegen/: Cargo.toml
codegen/src/: main.rs
src/: lib.rs  main.rs  util.rs
src/capabilities/: completion.rs  diagnostics.rs  document_symbols.rs  folding_range.rs  formatting.rs  goto_definition.rs  highlight.rs  hover.rs  mod.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens.rs  symbols.rs  util.rs
